1.2.8 - fixed pro icon:  too big and not centered

--- a/src/assets/admin/css/admin-style.css
+++ b/src/assets/admin/css/admin-style.css
@@ -129,6 +129,8 @@ hr.uo-underline {
 
 .uo_icon_pro_fa {
     padding-top: 9px;
+    font-size: 28px!important;
+    padding-left: 16px;
 }
 
 .uo_pro_text {
